# pynumic

./: .buildinfo  .gitattributes  .gitignore  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: python-app.yml
docs/: .gitignore  Makefile  README.md  publish.sh
docs/source/: .gitignore  conf.py  index.rst
src/pynumic/: __init__.py  __version__.py  pynumic.py
