[tool.poetry]
name = "pynumic"
version = "0.1.0"
description = "Simple Neural Network Library"
authors = ["Oleg Alexandrov <alexandrovoleg.ru@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://zigenzoog.github.io/pynumic"
repository = "https://github.com/zigenzoog/pynumic"
documentation = "https://zigenzoog.github.io/pynumic/docs"
keywords = [
    "neural",
    "network",
    "library"
]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "pynumic", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
poetry = "^1.3.2"
requests = "^2.28.2"
setuptools = "^67.2.0"
pre-commit = "^2.21.0"
black = "^22.12.0"
pylint = "^2.16.1"
flake8 = "^6.0.0"
autopep8 = "^2.0.1"
bandit = "^1.7.4"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
pydocstyle = "^6.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
